WebCore: 2008-08-28  Holger Hans Peter Freyther  <zecke@selfish.org>

Rubber-stamped by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=17261

        Make it possible to theme the default Url icon and enable this for
        the Qt port. To have a minimal usage of #ifdef in the code the setting
        of the icon was moved to a new method which comes in two flavors.

        * loader/icon/IconDatabase.cpp:
        (WebCore::loadDefaultIconRecord): Load or set the default icon
        (WebCore::IconDatabase::defaultIcon):

WebKit/win:
2008-08-28  Holger Hans Peter Freyther  <zecke@selfish.org>

        Rubber-stamped by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=17261

        Remove the urlIcon.png from the project and the resource file. Remove
        the usage of this icon from WebKitDLL.cpp and change WebIconDatabase
        to get the icon from the IconDatabase code which is using a version of
        the icon that is compiled into the code.

        * WebIconDatabase.cpp:
        (WebIconDatabase::getOrCreateDefaultIconBitmap): Use the icon from the
        IconDatabase.cpp
        * WebKit.vcproj/WebKit.rc: Remove urlIcon.cpp
        * WebKit.vcproj/urlIcon.png: Removed.
        * WebKitDLL.cpp:
        (loadResourceIntoBuffer): Remove "urlIcon"



Canonical link: https://commits.webkit.org/28373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35970 268f45cc-cd09-0410-ab3c-d52691b4dbfc